docker/grafana/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-server
  namespace: pet-clinic
  labels:
    app: grafana-server
spec:
  selector:
    matchLabels:
      app: grafana-server
  template:
    metadata:
      labels:
        app: grafana-server
    spec:
      containers:
        - image: "$CONTAINER_IMAGE"
          imagePullPolicy: Always
          name: grafana-server
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi

---

apiVersion: v1
kind: Service
metadata:
  name: grafana-server
  namespace: pet-clinic
spec:
  selector:
    app: grafana-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-server
  namespace: pet-clinic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: appGatewaySslCertPetClinic
    appgw.ingress.kubernetes.io/request-timeout: "90"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: $HOST_NAME
    http:
      paths:
      - path: /
        backend:
          service:
            name: grafana-server
            port:
              number: 80
        pathType: Prefix
